--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -41,6 +41,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
+          platforms: linux/amd64,linux/arm64  # Build for both architectures
           tags: ${{ env.DOCKERHUB_REPOSITORY }}:latest,${{ env.DOCKERHUB_REPOSITORY }}:${{ env.DOCKER_IMAGE_TAG }}
           no-cache: true
           # cache-from: type=local,src=/tmp/.buildx-cache
