--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -43,6 +43,5 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64  # Build for both architectures
           tags: ${{ env.DOCKERHUB_REPOSITORY }}:latest,${{ env.DOCKERHUB_REPOSITORY }}:${{ env.DOCKER_IMAGE_TAG }}
-          no-cache: true
-          # cache-from: type=local,src=/tmp/.buildx-cache
-          # cache-to: type=local,dest=/tmp/.buildx-cache #
+          cache-from: type=gha  # GitHub Actions cache
+          cache-to: type=gha,mode=max
